# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  diff.py  gen_diff.py  generate_diff.py  main.py  parser.py
gendiff/format/: formatting.py  json.py  plain.py
gendiff/formats/: formatting.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: flat_result.txt
tests/fixtures/Recursive/: recursive_result.py
tests/fixtures/json/: json.py  json.txt
tests/fixtures/plain/: plain_result.py
tests/fixtures/stylish/: file1.yaml  stylish_result.py
